--- a/index.html
+++ b/index.html
@@ -279,14 +279,14 @@
             
             <p>Our mission is simple: to provide food that not only nourishes but inspires. We invite you to be a part of our journey, where every meal is more than just a dining experience—it's a celebration of flavor, tradition, and creativity.</p></b>
             
-            <img src="/images/About Us.jpg" alt="About Us Image"> <!-- Placeholder image -->
+            <img src="images/About Us.jpg" alt="About Us Image"> <!-- Placeholder image -->
         </section>
 
         <!-- Special Item Section -->
         <section id="special-item" class="section special-item-section">
             <h1>Special Item of the week</h1>
             <div class="special-item">
-                <img src="/images/Special Food.jpg" alt="Special Item"> <!-- Placeholder image -->
+                <img src="images/Special Food.jpg" alt="Special Item"> <!-- Placeholder image -->
                 <div class="special-item-info">
                     <h2>Deluxe Seafood Platter</h2>
                     <p>Indulge in a sumptuous array of the ocean's finest offerings with our Deluxe Seafood Platter. This exquisite selection features the freshest catches sourced daily, including succulent lobster tails, plump shrimp, tender calamari, and delicate scallops, all expertly prepared to perfection.</p>
